[tool.poetry]
name = "wizz"
version = "0.1.0"
description = ""
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryzhakar/wizz"
repository = "https://github.com/ryzhakar/wizz"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
sqlalchemy = "^2"
langchain = "^0.1.12"
langchain-cli = "^0.0.21"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
devtools = "^0.12.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
