[tool.poetry]
name = "wizz"
version = "0.2.2"
description = "A terminal-based LLM chat client with knowledge retrieval."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryzhakar/wizz"
repository = "https://github.com/ryzhakar/wizz"
keywords = ["chat-client", "local-LLMs", "terminal", "query-response", "AI", "natural-language-processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Communications :: Chat",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "wizz"}]

[tool.poetry.scripts]
wizz = "wizz.app:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
sqlalchemy = "^2"
sqlalchemy2-stubs = "^0"
alembic = "^1.13.1"
numpy = "^1.26.4"
sentence-transformers = "^2.5.1"
annoy = "^1.17.3"
tiktoken = "^0.6.0"
aiorwlock = "^1.4.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
async-annoy = ">=0.3.0"
pydantic = "^2.6.4"
sentencepiece = "^0.2.0"
protobuf = "^5.26.0"
openai = "^1.14.2"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
devtools = "^0.12.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
